--- a/demo.html
+++ b/demo.html
@@ -146,9 +146,9 @@
 
     <script src="./xinghuoBanner/index.js" type="module"></script>
     <script>
-        test = (e) => {
-            console.log(e);
-        }
+        // test = (e) => {
+        //     console.log(e);
+        // }
     </script>
 </body>
 
